KAW-882: fix low content image text overlapping issue

--- a/blocks/text-with-image/text-with-image.css
+++ b/blocks/text-with-image/text-with-image.css
@@ -35,11 +35,13 @@
 
 .text-with-image picture {
   display: flex;
+  justify-content: end;
 }
 
 .text-with-image picture img {
   aspect-ratio: 1/1;
   border-radius: 4px;
+  object-fit: cover;
 }
 
 .text-with-image .h3 {
@@ -70,11 +72,9 @@
 }
 
 .text-with-image.stacked-images .column-with-text {
-  transform: translateY(
-    calc(var(--text-image-2nd-image-height) - var(--text-image-distance))
-  );
-  padding-bottom: calc(var(--text-image-2nd-image-height) - var(--text-image-distance));
+  transform: translateY(calc(-1 * var(--text-image-distance)));
   transition: transform var(--animation-time) linear;
+  margin-block-end: calc(-1 * var(--text-image-max-overlap));
 }
 
 .text-with-image.stacked-images .column-with-images p:nth-child(1) img {
@@ -85,11 +85,10 @@
 }
 
 .text-with-image.stacked-images .column-with-images p:nth-child(2) img {
-  width: 214px;
-  position: absolute;
-  right: 21px;
+  width: var(--text-image-2nd-image-height);
+  margin-inline-end: 21px;
   bottom: 0;
-  transform: translateY(calc(100% - var(--text-image-distance)));
+  transform: translateY(calc(-1 * var(--text-image-distance)));
   transition: transform var(--animation-time) linear;
 }
 
@@ -186,7 +185,8 @@
   }
 
   .text-with-image.stacked-images .column-with-images p:nth-child(2) img {
-    right: 36px;
+    margin-inline-end: 36px;
+    margin-block-end: calc(-1 * var(--text-image-max-overlap));
   }
 
   /* wide stacked images variant */
